--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ div img.mainBanner {
   align-items: baseline;
   
 }
-.menuIcon {
+img.menuIcon {
+  filter: hue-rotate(50deg);
 
 }
 .textMenu {
   color: rgb(157, 157, 157);
+  
 }
 div.textMenu span.textMenu{
   position: relative;
@@ -47,7 +49,6 @@ div.textMenu span.textMenu{
 }
 .search {
 opacity: 80%;
-border-radius: 5px;
 height: 20px;
 max-width: 185px;
 }
@@ -56,4 +57,9 @@ input.s-input{
   text-decoration: none;
   border: none;
   outline: none; /* Убирает контур при фокусировке */
+  height: 25px;
+  border-radius: 5px;
+  font-size: 16px;
+  position: relative;
+  top: -5px;
 }
